--- a/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormDuyetPhieuTraHang.resx
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormDuyetPhieuTraHang.resx
@@ -282,4 +282,7 @@
         ABUShanYk5ziAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>141, 17</value>
+  </metadata>
 </root>
