--- a/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormThemSPKM.resx
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormThemSPKM.resx
@@ -276,4 +276,7 @@
         PSKRW8D5v5fKK7KuAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>141, 17</value>
+  </metadata>
 </root>
